# agentwebapp

./: .browserslistrc  .dockerignore  .env.example  .env.integrations.example  .env.level14.example  .env.oauth2.template  .env.production.example  .env.production.template  .env.revolution.example  .eslintrc.json  .gcloudignore  .gitignore  .lighthouserc.cjs  CODEOWNERS  CODING_STANDARDS.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.production  Dockerfile.simple  Dockerfile.test  README.md  add-auto-optimization.sql  api-integration  apply-migration.ps1  auto-migrate.ps1  cloud-run-env-template.txt  cloudbuild.yaml  code-analysis-report.json  codecov.yml  deploy-interactive.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  drizzle.config.ts  ecosystem.config.js  enable_pgvector.sql  env.offline.temp  firebase.json  (+25 more)
.data/: knowledge.json
.firebase/: hosting.cHVibGlj.cache
.github/: labeler.yml  pull_request_template.md
actions/: agent-actions.ts  ai-optimization.ts  brain-actions.ts  budget-actions.ts  budget-analytics.ts  inbox-actions.ts  log-actions.ts  pipeline-actions.ts  settings-actions.ts
app/: agent-cleanup-panel.css  agent-test-panel.css  error.tsx  global-error.tsx  globals.css  inbox-v2.css  integrations-oauth2.css  layout.tsx  my-agents-premium.css  page.tsx  providers.tsx  revolutionary-animations.css  sintra-chat.css  test-simple.tsx
components/: AdminBadge.tsx  AgentBulkBar.tsx  (+40 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+2448 files in other folders)
